
	* src/cerebrod/cerebrod_config.h, src/cerebrod/cerebrod_config.c
	(cerebrod_config): Rename to cerebrod_config_setup.

	* src/cerebrod/cerebrod.c (main): Update for function name change.

	* src/cerebrod/cerebrod_config.c (_config_load_dynamic_module,
	_cerebrod_config_module_setup): Remove calls to Lt_dlclose and
	Lt_dlexit, so config module is kept upon on exit.
	
2005-03-23  Albert Chu  <chu11@llnl.gov>

	Begin work on libcerebro

	* src/libcerebro/Makefile.am,
	src/libcerebro/cerebrod_config_module.h,
	src/libcerebro/cerebrod_clusterlist.h: New files.

	* configure.ac, src/Makefile.am: Updated for new files and directories.

	* src/libcommon/fd.c (fd_write_n): Remove warnings.

	* src/cerebrod/cerebrod_clusterlist.h: Remove useless headers.

	* src/cerebrod/cerebrod_clusterlist_utils.c: Fix header problems.

	* src/cerebrod/cerebrod_config.h,
	src/cerebrod/cerebrod_clusterlist.h: Removed definitions and
	declarations due to new ones in
	src/libcerebro/cerebrod_config_module.h and
	src/libcerebro/cerebrod_clusterlist.h.

	* src/cerebrod/cerebrod_config.c,
	src/cerebrod_config_gendersllnl.c
	src/cerebrod/cerebrod_clusterlist.c,
	src/cerebrod/cerebrod_clusterlist_none.c,
	src/cerebrod_clusterlist_hostsfile.c,
	src/cerebrod_clusterlist_genders.c,
	src/cerebrod_clusterlist_gendersllnl.c: Include new headers as
	needed.

	* src/cerebrod/cerebrod_config.c
	(_cerebrod_load_alternate_configuration): Reworked as needed for
	by new headers.

2005-03-22  Albert Chu  <chu11@llnl.gov>

	More code cleanup

	* src/cerebrod/cerebrod_static_modules.c,
	src/cerebrod/cerebrod_dynamic_modules.h,
	src/cerebrod/cerebrod_dynamic_modules.c: New files.

	* src/cerebrod/Makefile.am: Re-worked for new files appropriately.

	* src/cerebrod/cerebrod_config.c
	(_cerebrod_find_static_config_module,
	_cerebrod_find_static_clusterlist_module): Removed due to new
	common functions in src/cerebrod/cerebrod_static_modules.c.

	* src/cerebrod/cerebrod_config.c: Removed static_config_modules