@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebrod_util.h,v 1.6 2005-03-22 20:56:40 achu Exp $
+ *  $Id: cerebrod_util.h,v 1.7 2005-03-25 19:44:05 achu Exp $
 \*****************************************************************************/
 
 #ifndef _CEREBROD_UTIL_H
@@ -7,7 +7,6 @@
 
 #include <pthread.h>
 
-#include "cerebrod.h"
 #include "hash.h"
 
 /* 
