@@ -1,8 +1,13 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.2 2005-03-24 01:29:21 achu Exp $
+## $Id: Makefile.am,v 1.3 2005-03-25 19:44:05 achu Exp $
 ##*****************************************************************************
+
+noinst_HEADERS = cerebrod_heartbeat_protocol.h \
+		 cerebro_updown_protocol.h
 
 cerebroheadersdir = $(includedir)/cerebro
 
-cerebroheaders_HEADERS = cerebrod_clusterlist_module.h \
+cerebroheaders_HEADERS = cerebro_defs.h \
+			 cerebrod_clusterlist_module.h \
 			 cerebrod_config_module.h
+
