@@ -1,0 +1,10 @@
+/*****************************************************************************\
+ *  $Id: cerebro_updown_protocol.h,v 1.1 2005-03-25 19:44:05 achu Exp $
+\*****************************************************************************/
+
+#ifndef _CEREBRO_UPDOWN_PROTOCOL_H
+#define _CEREBRO_UPDOWN_PROTOCOL_H
+
+
+
+#endif /* _CEREBRO_UPDOWN_PROTOCOL_H */
